<resources>
    <string name="app_name">ZB Card</string>
    <string name="noConnection">No Internet Connection available.</string>
    <string name="turnOnInternet">Turn On your Internet !!</string>
    <string name="mobileData">Mobile data</string>
    <string name="wifi">WIFI</string>
    <string name="server_error">Sorry Server is facing some technical issues. please try after some time.</string>
    <string name="arabic">العربية</string>
    <string name="english">English</string>
    <string name="keep_smiling_and_stay_healthy"><![CDATA[Keep Smiling & Stay Healthy]]></string>
    <string name="enter_your_mobile_no">Enter your \nmobile number</string>
    <string name="you_will_receive_4_digit_code_to_verify_next">You\'ll receive a 4 digit code to verify next.</string>
    <string name="next">Next</string>
    <string name="mobile_no_required">Please Enter Your mobile number to continue.</string>
    <string name="invalid_mobile">Invalid Mobile number</string>
    <string name="enter_code_sent_to_your_number">Enter code sent \nto your number</string>
    <string name="we_sent_it_to_the_number">We sent it to the number [x]</string>
    <string name="dint_receive_the_otp">Didn\'t receive the otp?</string>
    <string name="resend_otp">Resend Otp</string>
    <string name="location_detection">The location will be detected to show the \nnearest shops to you</string>
    <string name="detect_location">Detect Location</string>
    <string name="continues">Continue</string>
    <string name="complete_address">Complete Address</string>
    <string name="clear_all">Clear All</string>
    <string name="detect_your_location">Detect your location</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="cart">CART</string>
    <string name="order">ORDER</string>
    <string name="favourite">FAVOURITE</string>
    <string name="product_detail">Product Details</string>
    <string name="view_all">View All</string>
    <string name="order_From">Order from the</string>
    <string name="preferred_vendor">preferred vendor</string>
    <string name="delivery">Delivery</string>
    <string name="customer">Customer</string>
    <string name="service">Service</string>
    <string name="all">All</string>
    <string name="sign_up">Sign up</string>
    <string name="phone_number">Phone number</string>
    <string name="_966">+966</string>
    <string name="email_or_mobile">Enter Your Email or Mobile</string>
    <string name="create_account">Create Account</string>
    <string name="already_user">Already a user?</string>
    <string name="login">Log In</string>
    <string name="enter_verification_code">Enter your verification code</string>
    <string name="sent_code_to_the_phone_number">We have sent code to the phone number</string>
    <string name="verify">Verify</string>
    <string name="didn_recieve_code">Did’t receive a code</string>
    <string name="enter_the_6_digit_code">Enter the 6 digit code</string>
    <string name="Step_one">Step 1of 5</string>
    <string name="When_were_you_born">When were you born?</string>
    <string name="select_date">Select date</string>
    <string name="plus_18">Only 18+ can have primary account</string>
    <string name="continue_profile">Continue</string>
    <string name="your_name">What is your name?</string>
    <string name="full_name">Your Full name</string>
    <string name="Step_two">Step 2 of 5</string>
    <string name="Step_three">Step 3 of 5</string>
    <string name="Step_four">Step 4 of 5</string>
    <string name="Step_five">Step 5 of 5</string>
    <string name="little_about_more">Little more info about you</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="profession">Profession</string>
    <string name="monthly_income">Monthly Income</string>
    <string name="nationality">Nationality</string>
    <string name="setup_login_pin">Set your login PIN</string>
    <string name="set_pin_msg">So that you can secure and login with PIN only you have access to.</string>
    <string name="pin">Pin</string>
    <string name="re_enter_pin">Re-enter the PIN to confirm</string>
    <string name="set_pin">Set PIN</string>
    <string name="kyc_msg">We need to verify your identity, we accept National ID , Passport etc.</string>
    <string name="complete_kyc">Complete your KYC</string>
    <string name="kyc_status">KYC status</string>
    <string name="start_kyc">Start my KYC</string>
    <string name="kyc">KYC</string>
    <string name="id_number">ID number</string>
    <string name="enter_id_number">Enter your ID number</string>
    <string name="scan_your_id">Scan your ID</string>
    <string name="browse_from_device">Or browse from device</string>
    <string name="only_18_plus">Only 18+ can have primary account</string>
    <string name="select_country">Select country</string>
    <string name="set">Set</string>
    <string name="ok_label">OK</string>
    <string name="error_label">Error</string>
    <string name="photo_saved">Photo has been saved to Camera</string>
    <string name="kyc_successfully_done">KYC submitted Succesfully</string>
    <string name="kyc_verify_time">Our team will verify your ID and your primary ZB card will be activated in next 1 hour.</string>
    <string name="close">Close</string>
    <string name="enter_mobile_email">Email ID/ User id / phone</string>
    <string name="enter_email_mobile">Enter your Email Id or phone or user id</string>
    <string name="forgot_pin">Forgot PIN?</string>
    <string name="forgot_user_id">Forgot user id?</string>
    <string name="generate_card">Generating your personalised card\ncard</string>
    <string name="card_info">We understand your needs and based upon you location we will provide the best services...</string>
    <string name="generating_card">Generating card....</string>
    <string name="hurry">Hurray !</string>
    <string name="set_experience">You are all set to experience awesomeness</string>
    <string name="card_generated">Your custom ca has been genertaed. lets start your ZB journey..</string>
    <string name="Star_zb_journey">Start ZB Journey</string>
</resources>