<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="userNameViewModel"
            type="com.htf.zbCard.ui.auth.signUp.SignUpViewModel"/>
        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/llTop"
            layout="@layout/toolbar_primary" />


        <TextView
            android:id="@+id/tv_mobile_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Step_two"
            android:textColor="@color/quantum_black_100"
            android:textSize="@dimen/font_16sp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:textAlignment="viewStart"
            app:layout_constraintTop_toBottomOf="@+id/llTop"
            android:layout_marginBottom="@dimen/margin_8dp"
            android:paddingStart="@dimen/margin_16dp"
            android:paddingEnd="@dimen/margin_16dp"
            android:fontFamily="@font/avenir_book"/>

        <TextView
            android:id="@+id/tv_category_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_name"
            android:textColor="@color/quantum_black_100"
            android:textSize="@dimen/font_24sp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="@dimen/margin_8dp"
            android:layout_marginStart="@dimen/font_16sp"
            android:layout_marginTop="@dimen/dimen_60"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/tv_mobile_text"
            android:layout_marginBottom="@dimen/margin_16dp"
            android:fontFamily="@font/avenir_black"/>

        <RelativeLayout
            android:id="@+id/rlt_date_select"
            android:background="@drawable/edit_text_bg"
            app:layout_constraintTop_toBottomOf="@+id/tv_category_name"
            android:layout_width="match_parent"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/dimen_5">

        <TextView
                android:id="@+id/etMobileEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/margin_8dp"
                android:background="@null"
                android:fontFamily="@font/avenir_book"
                android:hint="@string/full_name"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="@color/colorTextHeading"
                android:textColorHint="@color/colorTextHeading"
                android:textSize="@dimen/font_16sp"
                tools:ignore="TextFields" />

        </RelativeLayout>

        <Button
            android:id="@+id/btn_continue_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_30"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:background="@drawable/btn_gradient"
            android:backgroundTint="@color/sign_up_green"
            android:fontFamily="@font/avenir_black"
            android:text="@string/continue_profile"
            android:layout_marginBottom="@dimen/dimen_50"
            app:layout_constraintTop_toBottomOf="@+id/rlt_date_select"
            android:textAllCaps="false"
            android:textColor="@color/color_white"
            android:textSize="@dimen/font_16sp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
