<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="dobViewModel"
            type="com.htf.zbCard.ui.auth.signUp.SignUpViewModel"/>
        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/llTop"
            layout="@layout/toolbar_primary" />

        <TextView
            android:id="@+id/tv_mobile_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Step_one"
            android:textColor="@color/quantum_black_100"
            android:textSize="@dimen/font_16sp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:textAlignment="viewStart"
            app:layout_constraintTop_toBottomOf="@+id/llTop"
            android:layout_marginBottom="@dimen/margin_8dp"
            android:paddingStart="@dimen/margin_16dp"
            android:paddingEnd="@dimen/margin_16dp"
            android:fontFamily="@font/avenir_book"/>

        <TextView
            android:id="@+id/tv_category_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/When_were_you_born"
            android:textColor="@color/quantum_black_100"
            android:textSize="@dimen/font_24sp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="@dimen/margin_8dp"
            android:layout_marginStart="@dimen/font_16sp"
            android:layout_marginTop="@dimen/dimen_60"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/tv_mobile_text"
            android:layout_marginBottom="@dimen/margin_16dp"
            android:fontFamily="@font/avenir_black"/>

        <RelativeLayout
            android:id="@+id/rlt_date_select"
            android:background="@drawable/edit_text_bg"
            app:layout_constraintTop_toBottomOf="@+id/tv_category_name"
            android:layout_width="match_parent"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/dimen_5">


            <TextView
                android:id="@+id/etMobileEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/margin_8dp"
                android:background="@null"
                android:fontFamily="@font/avenir_book"
                android:hint="@string/select_date"
                android:layout_alignParentStart="true"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="@color/colorTextHeading"
                android:textColorHint="@color/colorTextHeading"
                android:textSize="@dimen/font_16sp"
                tools:ignore="TextFields" />


            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/dimen_25"
                android:layout_height="@dimen/dimen_25"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_calendor" />


        </RelativeLayout>

        <TextView
            android:id="@+id/tv_18_plus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/plus_18"
            android:textColor="@color/quantum_black_100"
            android:textSize="@dimen/font_14sp"
            android:textAlignment="textStart"
            android:layout_marginTop="@dimen/dimen_25"
            app:layout_constraintTop_toBottomOf="@+id/rlt_date_select"
            android:layout_marginBottom="@dimen/margin_16dp"
            android:layout_marginStart="@dimen/font_16sp"
            android:layout_marginEnd="@dimen/font_16sp"
            android:fontFamily="@font/avenir_book"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivInformation"
            android:layout_height="@dimen/dimen_30"
            android:layout_width="@dimen/dimen_30"
            android:layout_marginEnd="@dimen/font_16sp"
            android:layout_marginTop="@dimen/dimen_20"
            app:layout_constraintTop_toBottomOf="@+id/rlt_date_select"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_information" />

        <Button
            android:id="@+id/btn_born"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:background="@drawable/btn_gradient"
            android:backgroundTint="@color/sign_up_green"
            android:fontFamily="@font/avenir_black"
            android:text="@string/continue_profile"
            android:layout_marginBottom="@dimen/dimen_50"
           app:layout_constraintBottom_toBottomOf="parent"
            android:textAllCaps="false"
            android:textColor="@color/color_white"
            android:textSize="@dimen/font_16sp" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>
