<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="setPinViewModel"
            type="com.htf.zbCard.ui.auth.signUp.SignUpViewModel"/>
        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/llTop"
            layout="@layout/toolbar_primary" />


        <TextView
            android:id="@+id/tv_mobile_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Step_four"
            android:textColor="@color/quantum_black_100"
            android:textSize="@dimen/font_16sp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:textAlignment="viewStart"
            app:layout_constraintTop_toBottomOf="@+id/llTop"
            android:layout_marginBottom="@dimen/margin_8dp"
            android:paddingStart="@dimen/margin_16dp"
            android:paddingEnd="@dimen/margin_16dp"
            android:fontFamily="@font/avenir_book"/>

        <TextView
            android:id="@+id/tv_category_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setup_login_pin"
            android:textColor="@color/quantum_black_100"
            android:textSize="@dimen/font_24sp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="@dimen/margin_8dp"
            android:layout_marginStart="@dimen/font_16sp"
            android:layout_marginTop="@dimen/dimen_60"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/tv_mobile_text"
            android:layout_marginBottom="@dimen/margin_16dp"
            android:fontFamily="@font/avenir_black"/>


        <TextView
            android:id="@+id/tv_pin_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_pin_msg"
            android:textColor="@color/color_about_grey"
            android:textSize="@dimen/font_16sp"
            android:layout_marginEnd="@dimen/dimen_50"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:textAlignment="viewStart"
            app:layout_constraintTop_toBottomOf="@+id/tv_category_name"
            android:layout_marginBottom="@dimen/margin_8dp"
            android:paddingEnd="@dimen/margin_16dp"
            android:fontFamily="@font/avenir_book"/>



        <TextView
            android:id="@+id/tvPin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_36dp"
            android:fontFamily="@font/avenir_book"
            android:text="@string/pin"
            android:visibility="visible"
            android:layout_marginStart="@dimen/dimen_20"
            app:layout_constraintTop_toBottomOf="@+id/tv_pin_msg"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/quantum_black_100"
            android:textSize="@dimen/font_16sp" />

        <com.mukesh.OtpView
            android:id="@+id/otpView"
            style="@style/newTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/margin_16dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:inputType="textPassword"
            android:itemBackground="@drawable/edit_text_selector"
            android:textColor="@color/sign_up_green"
            android:textSize="16sp"
            app:itemCount="6"
            app:itemHeight="45dp"
            app:itemRadius="@dimen/dimen_7"
            app:itemSpacing="@dimen/dimen_10"
            app:itemWidth="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPin"
            app:viewType="none"
            tools:ignore="MissingConstraints">

            <requestFocus />
        </com.mukesh.OtpView>


        <TextView
            android:id="@+id/tv_re_enter_Pin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_36dp"
            android:fontFamily="@font/avenir_book"
            android:text="@string/re_enter_pin"
            android:visibility="visible"
            android:layout_marginStart="@dimen/dimen_20"
            app:layout_constraintTop_toBottomOf="@+id/otpView"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/quantum_black_100"
            android:textSize="@dimen/font_16sp" />

        <com.mukesh.OtpView
            android:id="@+id/otp_re_enter_View"
            style="@style/newTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/margin_16dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:inputType="textPassword"
            android:itemBackground="@drawable/edit_text_selector"
            android:textColor="@color/sign_up_green"
            android:textSize="16sp"
            app:itemCount="6"
            app:itemHeight="45dp"
            app:itemRadius="@dimen/dimen_7"
            app:itemSpacing="@dimen/dimen_10"
            app:itemWidth="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_re_enter_Pin"
            app:viewType="none"
            tools:ignore="MissingConstraints">

            <requestFocus />
        </com.mukesh.OtpView>


        <Button
            android:id="@+id/btn_set_login_pin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:background="@drawable/btn_gradient"
            android:backgroundTint="@color/sign_up_green"
            android:fontFamily="@font/avenir_black"
            android:layout_marginBottom="@dimen/margin_36dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/set_pin"
            android:textAllCaps="false"
            android:textColor="@color/color_white"
            android:textSize="@dimen/font_16sp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
