<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="personalCardViewModel"
            type="com.htf.zbCard.ui.auth.signUp.SignUpViewModel"/>
        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/llTop"
            layout="@layout/toolbar_primary" />



        <TextView
            android:id="@+id/tv_category_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/generate_card"
            android:textColor="@color/quantum_black_100"
            android:textSize="@dimen/font_24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:layout_marginStart="@dimen/dimen_20"
            android:layout_marginTop="@dimen/dimen_60"
            android:textAlignment="viewStart"
            app:layout_constraintTop_toBottomOf="@+id/llTop"
            android:layout_marginBottom="@dimen/margin_16dp"
            android:fontFamily="@font/avenir_black"/>


        <TextView
            android:id="@+id/tv_pin_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_info"
            android:textColor="@color/color_about_grey"
            android:textSize="@dimen/font_16sp"
            android:layout_marginEnd="@dimen/dimen_50"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:textAlignment="viewStart"
            app:layout_constraintTop_toBottomOf="@+id/tv_category_name"
            android:layout_marginBottom="@dimen/margin_8dp"
            android:paddingEnd="@dimen/margin_16dp"
            android:fontFamily="@font/avenir_book"/>



        <ImageView
            android:id="@+id/tv_kyc_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimen_100"
            android:fontFamily="@font/avenir_book"
            android:src="@drawable/ic_progress_bar_card"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/dimen_20"
            app:layout_constraintTop_toBottomOf="@+id/tv_pin_msg"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/lightGrey"
            android:textSize="@dimen/font_16sp" />



        <TextView
            android:id="@+id/tv_re_enter_Pin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimen_12"
            android:fontFamily="@font/avenir_book"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/generating_card"
            android:visibility="visible"
            android:layout_marginStart="@dimen/dimen_20"
            app:layout_constraintTop_toBottomOf="@+id/tv_kyc_msg"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/quantum_black_100"
            android:textSize="@dimen/font_16sp" />




    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
